ESLint linting and Prettier formatting added

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Findthinger</title>
-   <link rel="stylesheet" href="css/main.css"> <!-- Compiled CSS will go here -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Findthinger</title>
+  <link rel="stylesheet" href="css/main.css" />
+  <!-- Compiled CSS will go here -->
 </head>
 
 <body>
-   <div id="app"></div> <!-- Root element for SPA -->
-   <script type="module" src="js/main.js"></script>
+
+  <!-- Root element for SPA -->
+  <div id="app"></div>
+
+  <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
