Installed Terser and cssnano for minification

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Findthinger</title>
-  <link rel="stylesheet" href="css/main.css" />
+  <!-- <link rel="stylesheet" href="css/main.css" /> -->
+  <link rel="stylesheet" href="css/main.min.css">
   <!-- Compiled CSS will go here -->
 </head>
 
@@ -14,7 +15,8 @@
   <!-- Root element for SPA -->
   <div id="app"></div>
 
-  <script type="module" src="js/main.js"></script>
+  <!-- <script type="module" src="js/main.js"></script> -->
+  <script type="module" src="js/main.min.js"></script>
 </body>
 
 </html>
