--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Findthinger</title>
-  <!-- <link rel="stylesheet" href="css/main.css" /> -->
   <link rel="stylesheet" href="css/main.min.css">
-  <!-- Compiled CSS will go here -->
 </head>
 
 <body>
 
-  <!-- Root element for SPA -->
+  <!-- add NAV outside of APP -->
+  <nav>
+    <a href="#/">Home</a>
+    <a href="#/search">Search</a>
+    <a href="#/about">About</a>
+  </nav>
+
   <div id="app"></div>
 
-  <!-- <script type="module" src="js/main.js"></script> -->
   <script type="module" src="js/main.min.js"></script>
 </body>
 
